#pragma once
};
    HTTP_SERVER_ERROR = 500

    HTTP_CLIENT_ERROR_CONFLICT = 409,
    HTTP_CLIENT_ERROR_NOT_FOUND = 404,
    HTTP_CLIENT_ERROR_FORBIDDEN = 403,
    HTTP_CLIENT_ERROR_NOT_AUTH = 401,
    HTTP_CLIENT_ERROR_BAD_REQUEST = 400,

    HTTP_NO_CONTENT = 204,
    HTTP_CREATED = 201,
    HTTP_OK = 200,
enum class HttpStatus {

// Values match common HTTP status codes.
// A tiny status enum used by RestAPI routers/controllers.


